Make `w` use `flat-top-serifless`/`almost-flat-top-serifed` by default.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -9188,7 +9188,7 @@ s = "serifless"
 t = "bent-hook"
 u = "toothed-serifless"
 v = "straight-serifless"
-w = "straight-serifless"
+w = "straight-flat-top-serifless"
 x = "straight-serifless"
 y = "straight-serifless"
 z = "straight-serifless"
@@ -9363,7 +9363,7 @@ r = "serifed"
 s = "bilateral-serifed"
 u = "toothed-serifed"
 v = "straight-serifed"
-w = "straight-serifed"
+w = "straight-almost-flat-top-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
@@ -9421,8 +9421,8 @@ q = "straight-bottom-serifed"
 r = "top-serifed"
 s = "bilateral-inward-serifed"
 u = "tailed-motion-serifed"
-v = "straight-motion-serifed"
-w = "straight-motion-serifed"
+v = "cursive-serifed"
+w = "cursive-serifed"
 x = "cursive"
 y = "cursive-motion-serifed"
 z = "cursive"
@@ -9454,6 +9454,8 @@ capital-d = "more-rounded-serifless"
 capital-g = "toothless-corner-serifless-hooked"
 capital-i = "short-serifed"
 capital-j = "serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-serifless"
 d = "toothed-serifless"
 e = "flat-crossbar"
@@ -9465,6 +9467,8 @@ k = "straight-serifless"
 l = "zshaped"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 long-s = "flat-hook-middle-serifed-xh"
 eszet = "longs-s-lig-serifless"
@@ -9511,6 +9515,8 @@ micro-sign = "toothed-serifless"
 capital-d = "more-rounded-bilateral-serifed"
 capital-j = "serifed-symmetric"
 capital-g = "toothless-corner-serifed-hooked"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 a = "double-storey-serifed"
 b = "toothed-serifed"
 c = "unilateral-serifed"
@@ -9563,6 +9569,8 @@ capital-j = "serifless"
 capital-m = "hanging-serifless"
 capital-s = "bilateral-serifed"
 capital-t = "serifed"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 capital-x = "straight-serifed"
 capital-y = "straight-serifed"
 capital-z = "straight-serifed"
@@ -9577,6 +9585,7 @@ k = "straight-serifless"
 l = "serifed"
 r = "serifed"
 u = "toothed-serifless"
+v = "straight-serifless"
 w = "straight-flat-top-serifless"
 x = "straight-serifed"
 y = "straight-turn-serifless"
@@ -9626,6 +9635,8 @@ micro-sign = "toothed-serifless"
 [composite.ss02.slab-override.design]
 capital-j = "serifed-symmetric"
 capital-m = "hanging-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 a = "double-storey-serifed"
 b = "toothed-serifed"
 d = "toothed-serifed"
@@ -9668,6 +9679,8 @@ capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "symmetric-touching-serifless"
 capital-m = "slanted-sides-hanging-serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-serifless"
 b = "toothless-corner-serifless"
 d = "toothed-serifless"
@@ -9680,6 +9693,8 @@ l = "serifed"
 q = "top-cut-straight-serifless"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "flat-hook-serifless"
@@ -9745,6 +9760,8 @@ capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hooked"
 capital-k = "symmetric-touching-serifed"
 capital-m = "slanted-sides-hanging-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 a = "double-storey-serifed"
 b = "toothless-corner-serifed"
 d = "toothed-serifed"
@@ -9752,6 +9769,8 @@ f = "flat-hook-serifed"
 k = "symmetric-touching-serifed"
 q = "top-cut-straight-serifed"
 u = "toothed-serifed"
+v = "straight-serifed"
+w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
@@ -9778,6 +9797,8 @@ f = "flat-hook-tailed"
 k = "cursive-top-left-and-bottom-right-serifed"
 l = "tailed-serifed"
 u = "toothed-motion-serifed"
+v = "straight-motion-serifed"
+w = "straight-motion-serifed"
 x = "straight-bilateral-motion-serifed"
 y = "straight-turn-motion-serifed"
 long-s = "flat-hook-descending"
@@ -9803,6 +9824,8 @@ capital-i = "serifed"
 capital-j = "serifed"
 capital-m = "hanging-serifless"
 capital-q = "straight"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-serifless"
 e = "flat-crossbar"
 d = "toothed-serifless"
@@ -9813,6 +9836,8 @@ k = "straight-serifless"
 l = "serifed-flat-tailed"
 t = "flat-hook-short-neck"
 u = "toothed-serifless"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "flat-hook-middle-serifed-xh"
@@ -9864,6 +9889,8 @@ micro-sign = "tailed-serifless"
 capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hooked"
 capital-m = "hanging-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 a = "double-storey-serifed"
 b = "toothed-serifed"
 c = "unilateral-serifed"
@@ -9917,6 +9944,8 @@ capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "symmetric-touching-serifless"
 capital-m = "slanted-sides-hanging-serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-tailed"
 d = "toothed-serifless"
 e = "flat-crossbar"
@@ -9929,6 +9958,8 @@ l = "serifed-semi-tailed"
 r = "corner-hooked-serifed"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-serifless"
@@ -9976,6 +10007,8 @@ capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hooked"
 capital-k = "symmetric-touching-serifed"
 capital-m = "slanted-sides-hanging-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 b = "toothed-serifed"
 c = "unilateral-serifed"
 d = "toothed-serifed"
@@ -10022,6 +10055,8 @@ capital-d = "more-rounded-serifless"
 capital-g = "toothless-corner-serifless-hooked"
 capital-i = "serifed"
 capital-j = "serifed"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-tailed"
 d = "toothed-serifless"
 e = "flat-crossbar"
@@ -10033,6 +10068,8 @@ l = "serifed-flat-tailed"
 r = "hookless-serifless"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "flat-hook-serifless"
@@ -10074,6 +10111,8 @@ micro-sign = "toothed-serifless"
 [composite.ss06.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hooked"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 b = "toothed-serifed"
 c = "unilateral-serifed"
 d = "toothed-serifed"
@@ -10122,6 +10161,7 @@ capital-g = "toothless-corner-serifless-hooked"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "symmetric-touching-serifless"
+capital-v = "straight-serifless"
 capital-w = "straight-flat-top-serifless"
 a = "single-storey-earless-corner-serifless"
 b = "toothless-corner-serifless"
@@ -10137,6 +10177,7 @@ q = "earless-corner-straight-serifless"
 r = "corner-hooked-serifless"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
+v = "straight-serifless"
 w = "straight-flat-top-serifless"
 y = "straight-turn-serifless"
 long-s = "bent-hook-middle-serifed"
@@ -10174,6 +10215,7 @@ micro-sign = "toothed-serifless"
 capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hooked"
 capital-k = "symmetric-touching-serifed"
+capital-v = "straight-serifed"
 capital-w = "straight-flat-top-serifed"
 a = "single-storey-earless-corner-serifed"
 b = "toothless-corner-serifed"
@@ -10363,6 +10405,8 @@ capital-d = "more-rounded-serifless"
 capital-g = "toothless-corner-serifless-hooked"
 capital-i = "serifed"
 capital-j = "serifed"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-serifless"
 d = "toothed-serifless"
 e = "flat-crossbar"
@@ -10375,6 +10419,7 @@ l = "serifed-semi-tailed"
 r = "hookless-serifless"
 t = "bent-hook-short-neck"
 u = "toothed-serifless"
+v = "straight-serifless"
 w = "straight-flat-top-serifless"
 y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
@@ -10419,6 +10464,8 @@ l = "tailed-serifed"
 [composite.ss09.slab-override.design]
 capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hooked"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 a = "double-storey-serifed"
 d = "toothed-serifed"
 f = "serifed"
@@ -10426,6 +10473,7 @@ i = "serifed"
 k = "straight-serifed"
 r = "hookless-serifed"
 u = "toothed-serifed"
+v = "straight-serifed"
 w = "straight-flat-top-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
@@ -10452,6 +10500,7 @@ i = "tailed-serifed"
 k = "straight-top-left-and-bottom-right-serifed"
 r = "hookless-top-serifed"
 u = "toothed-motion-serifed"
+v = "straight-motion-serifed"
 w = "straight-flat-top-motion-serifed"
 x = "straight-bilateral-motion-serifed"
 y = "straight-turn-motion-serifed"
@@ -10473,6 +10522,7 @@ capital-i = "serifed"
 capital-j = "serifless"
 capital-k = "symmetric-touching-serifless"
 capital-q = "crossing"
+capital-v = "straight-serifless"
 capital-w = "straight-vertical-sides-serifless"
 a = "double-storey-toothless-corner"
 b = "toothed-serifless"
@@ -10484,6 +10534,7 @@ k = "symmetric-connected-serifless"
 l = "hooky"
 q = "straight-serifless"
 t = "flat-hook"
+v = "straight-serifless"
 w = "rounded-vertical-sides-serifless"
 y = "cursive-flat-hook-serifless"
 long-s = "flat-hook-middle-serifed"
@@ -10528,6 +10579,7 @@ cyrl-u = "cursive-flat-hook-serifless"
 capital-a = "round-top-base-serifed"
 capital-j = "serifed"
 capital-k = "symmetric-touching-serifed"
+capital-v = "straight-serifed"
 capital-w = "straight-vertical-sides-serifed"
 b = "toothed-serifed"
 f = "flat-hook-serifed"
@@ -10536,6 +10588,7 @@ i = "serifed"
 k = "symmetric-connected-serifed"
 l = "serifed"
 q = "straight-serifed"
+v = "straight-serifed"
 w = "rounded-vertical-sides-serifed"
 x = "straight-serifed"
 y = "cursive-flat-hook-serifed"
@@ -10558,6 +10611,7 @@ i = "serifed-flat-tailed"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
 l = "serifed-flat-tailed"
 q = "top-cut-straight-serifed"
+v = "straight-motion-serifed"
 w = "rounded-vertical-sides-motion-serifed"
 x = "straight-bilateral-motion-serifed"
 y = "cursive-flat-hook-motion-serifed"
@@ -10617,6 +10671,8 @@ capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "symmetric-touching-serifless"
 capital-m = "slanted-sides-hanging-serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-toothless-corner"
 b = "toothless-corner-serifless"
 d = "toothless-corner-serifless"
@@ -10633,6 +10689,8 @@ q = "earless-corner-straight-serifless"
 r = "earless-corner-serifless"
 t = "bent-hook-short-neck"
 u = "toothless-corner-serifless"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-serifless"
@@ -10699,6 +10757,8 @@ capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hookless"
 capital-k = "symmetric-touching-serifed"
 capital-m = "slanted-sides-hanging-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 b = "toothless-corner-serifed"
 d = "toothless-corner-serifed"
 f = "serifed"
@@ -10709,6 +10769,8 @@ p = "earless-corner-serifed"
 q = "earless-corner-straight-serifed"
 r = "earless-corner-serifed"
 u = "toothless-corner-serifed"
+v = "straight-serifed"
+w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
@@ -10739,6 +10801,8 @@ m = "earless-corner-double-arch-short-leg-bottom-right-serifed"
 n = "earless-corner-straight-motion-serifed"
 r = "earless-corner-serifless"
 u = "tailed-motion-serifed"
+v = "straight-motion-serifed"
+w = "straight-motion-serifed"
 x = "straight-bilateral-motion-serifed"
 y = "straight-turn-motion-serifed"
 long-s = "bent-hook-tailed"
@@ -10761,6 +10825,8 @@ capital-g = "toothless-corner-serifless-hooked"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "symmetric-touching-serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-tailed"
 d = "toothed-serifless"
 e = "flat-crossbar"
@@ -10772,6 +10838,8 @@ l = "hooky"
 r = "corner-hooked-serifless"
 t = "bent-hook-short-neck2"
 u = "toothed-serifless"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 long-s = "bent-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
@@ -10813,6 +10881,8 @@ micro-sign = "toothed-serifless"
 capital-d = "more-rounded-bilateral-serifed"
 capital-g = "toothless-corner-serifed-hooked"
 capital-k = "symmetric-touching-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 b = "toothed-serifed"
 c = "unilateral-serifed"
 d = "toothed-serifed"
@@ -10862,6 +10932,7 @@ capital-j = "serifless"
 capital-k = "symmetric-connected-serifless"
 capital-m = "hanging-serifless"
 capital-q = "straight"
+capital-v = "straight-serifless"
 capital-w = "straight-flat-top-serifless"
 a = "double-storey-serifless"
 d = "toothed-serifless"
@@ -10873,6 +10944,7 @@ k = "symmetric-connected-serifless"
 l = "serifed-flat-tailed"
 t = "flat-hook-short-neck"
 u = "toothless-rounded-serifless"
+v = "straight-serifless"
 w = "straight-flat-top-serifless"
 y = "straight-serifless"
 long-s = "flat-hook-serifless"
@@ -10936,6 +11008,7 @@ capital-g = "toothless-rounded-serifed-hooked"
 capital-j = "serifed"
 capital-k = "symmetric-connected-serifed"
 capital-m = "hanging-serifed"
+capital-v = "straight-serifed"
 capital-w = "straight-flat-top-serifed"
 a = "double-storey-serifed"
 d = "toothed-serifed"
@@ -10943,6 +11016,7 @@ f = "flat-hook-serifed"
 g = "single-storey-flat-hook-serifed"
 k = "symmetric-connected-serifed"
 u = "toothless-rounded-serifed"
+v = "straight-serifed"
 w = "straight-flat-top-serifed"
 x = "straight-serifed"
 y = "straight-serifed"
@@ -10972,6 +11046,7 @@ f = "flat-hook-tailed"
 g = "single-storey-flat-hook-serifless"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
 u = "toothless-rounded-motion-serifed"
+v = "straight-motion-serifed"
 w = "straight-flat-top-motion-serifed"
 x = "straight-bilateral-motion-serifed"
 y = "cursive-flat-hook-motion-serifed"
@@ -10996,6 +11071,8 @@ description = "IBM Plex Mono Style"
 capital-i = "serifed"
 capital-j = "serifed"
 capital-m = "hanging-serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-tailed"
 d = "toothed-serifless"
 f = "flat-hook-serifed-crossbar-at-x-height"
@@ -11007,6 +11084,7 @@ l = "serifed"
 r = "hookless-serifed"
 t = "flat-hook-short-neck"
 u = "toothed-serifless"
+v = "straight-serifless"
 w = "straight-flat-top-serifless"
 x = "straight-serifless"
 y = "straight-turn-serifless"
@@ -11081,9 +11159,12 @@ ampersand = "closed"
 
 [composite.ss15.slab-override.design]
 capital-m = "hanging-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 d = "toothed-serifed"
 k = "straight-serifed"
 u = "toothed-serifed"
+v = "straight-serifed"
 w = "straight-flat-top-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
@@ -11107,6 +11188,7 @@ micro-sign = "toothed-serifed"
 [composite.ss15.slab-override.italic]
 k = "diagonal-tailed-cursive-top-left-serifed"
 u = "toothed-motion-serifed"
+v = "cursive-serifed"
 w = "cursive-serifed"
 x = "cursive"
 y = "cursive-motion-serifed"
@@ -11133,6 +11215,8 @@ capital-l = "motion-serifed"
 capital-m = "hanging-serifless"
 capital-s = "bilateral-inward-serifed"
 capital-t = "serifed"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-serifed"
 b = "toothless-corner-serifed"
 c = "unilateral-inward-serifed"
@@ -11151,6 +11235,8 @@ q = "earless-corner-straight-serifless"
 r = "serifed"
 t = "bent-hook-short-neck2"
 u = "toothed-serifed"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 capital-eszet = "rounded-serifless"
 long-s = "bent-hook-middle-serifed"
@@ -11202,6 +11288,8 @@ capital-d = "more-rounded-bilateral-serifed"
 capital-k = "symmetric-connected-serifed"
 capital-l = "serifed"
 capital-m = "hanging-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 a = "double-storey-hook-inward-serifed-serifed"
 h = "straight-serifed"
 k = "straight-serifed"
@@ -11258,6 +11346,8 @@ capital-p = "closed-motion-serifed"
 capital-r = "straight-top-left-and-bottom-right-serifed"
 capital-s = "unilateral-inward-serifed"
 capital-u = "toothed-serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 capital-z = "straight-top-serifed"
 a = "double-storey-tailed"
 b = "toothed-serifless"
@@ -11365,6 +11455,8 @@ capital-p = "closed-serifed"
 capital-r = "straight-serifed"
 capital-s = "bilateral-inward-serifed"
 capital-u = "toothed-serifed"
+capital-w = "straight-serifed"
+capital-v = "straight-serifed"
 capital-z = "straight-serifed"
 a = "double-storey-hook-inward-serifed-tailed"
 b = "toothed-serifed"
@@ -11434,6 +11526,8 @@ capital-i = "serifed"
 capital-j = "serifed"
 capital-k = "symmetric-connected-serifless"
 capital-m = "hanging-serifless"
+capital-v = "straight-serifless"
+capital-w = "straight-serifless"
 a = "double-storey-tailed"
 b = "toothless-corner-serifless"
 d = "toothed-serifless"
@@ -11445,6 +11539,8 @@ k = "symmetric-connected-serifless"
 l = "serifed"
 q = "earless-corner-straight-serifless"
 u = "toothed-serifless"
+v = "straight-serifless"
+w = "straight-serifless"
 y = "straight-turn-serifless"
 long-s = "bent-hook-middle-serifed-xh"
 eszet = "longs-s-lig-serifless"
@@ -11492,12 +11588,16 @@ eszet = "longs-s-lig-descending-serifless"
 capital-g = "toothless-rounded-serifed-hooked"
 capital-k = "symmetric-connected-serifed"
 capital-m = "hanging-serifed"
+capital-v = "straight-serifed"
+capital-w = "straight-serifed"
 b = "toothless-corner-serifed"
 d = "toothed-serifed"
 f = "serifed-crossbar-at-x-height"
 k = "symmetric-connected-serifed"
 q = "earless-corner-straight-serifed"
 u = "toothed-serifed"
+v = "straight-serifed"
+w = "straight-serifed"
 x = "straight-serifed"
 y = "straight-turn-serifed"
 z = "straight-serifed"
@@ -11522,6 +11622,8 @@ micro-sign = "tailed-serifed"
 f = "extended-crossbar-at-x-height"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
 u = "toothed-motion-serifed"
+v = "straight-motion-serifed"
+w = "straight-motion-serifed"
 x = "straight-bilateral-motion-serifed"
 y = "straight-turn-motion-serifed"
 long-s = "bent-hook-descending-middle-serifed-xh"
@@ -11550,7 +11652,7 @@ capital-y = "curly-serifless"
 capital-z = "curly-serifless"
 k = "curly-serifless"
 v = "curly-serifless"
-w = "curly-serifless"
+w = "curly-flat-top-serifless"
 x = "curly-serifless"
 y = "curly-serifless"
 z = "curly-serifless"
@@ -11586,7 +11688,7 @@ capital-y = "curly-serifed"
 capital-z = "curly-serifed"
 k = "curly-serifed"
 v = "curly-serifed"
-w = "curly-serifed"
+w = "curly-almost-flat-top-serifed"
 x = "curly-serifed"
 y = "curly-turn-serifed"
 z = "curly-serifed"
@@ -11603,8 +11705,8 @@ seven = "curly-serifed"
 
 [composite.ss20.slab-override.italic]
 k = "diagonal-tailed-cursive-top-left-serifed"
-v = "curly-motion-serifed"
-w = "curly-motion-serifed"
+v = "cursive-serifed"
+w = "cursive-serifed"
 x = "cursive"
 y = "cursive-motion-serifed"
 z = "cursive"
