Cleanup of `W/sansSerif` under Etoile.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1847,7 +1847,7 @@ rank = 2
 groupRank = 1
 descriptionAffix = "straight body shape that the middle is almost aligned to the top"
 selectorAffix.W = "straightAlmostFlatTop"
-selectorAffix."W/sansSerif" = "straightAlmostFlatTop"
+selectorAffix."W/sansSerif" = "straightFlatTop"
 selectorAffix.WHookTop = "straightAlmostFlatTop"
 
 [prime.capital-w.variants-buildup.stages.body.straight-flat-top]
@@ -1922,7 +1922,7 @@ groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem almost aligned to the top"
 selectorAffix.W = "curlyAlmostFlatTop"
-selectorAffix."W/sansSerif" = "curlyAlmostFlatTop"
+selectorAffix."W/sansSerif" = "curlyFlatTop"
 selectorAffix.WHookTop = "curlyAlmostFlatTop"
 
 [prime.capital-w.variants-buildup.stages.body.curly-flat-top]
@@ -4856,7 +4856,7 @@ rank = 2
 groupRank = 1
 descriptionAffix = "straight body shape that the middle is almost aligned to the top"
 selectorAffix.w = "straightAlmostFlatTop"
-selectorAffix."w/sansSerif" = "straightAlmostFlatTop"
+selectorAffix."w/sansSerif" = "straightFlatTop"
 selectorAffix.wHookTop = "straightAlmostFlatTop"
 
 [prime.w.variants-buildup.stages.body.straight-flat-top]
@@ -4931,7 +4931,7 @@ groupRank = 3
 nonBreakingVariantAdditionPriority = 100
 descriptionAffix = "curly body with a middle stem almost aligned to the top"
 selectorAffix.w = "curlyAlmostFlatTop"
-selectorAffix."w/sansSerif" = "curlyAlmostFlatTop"
+selectorAffix."w/sansSerif" = "curlyFlatTop"
 selectorAffix.wHookTop = "curlyAlmostFlatTop"
 
 [prime.w.variants-buildup.stages.body.curly-flat-top]
