Update `e`/`capital-eszet`/`bar` variants used by `ss08`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -1942,7 +1942,7 @@ rank = 3
 descriptionAffix = "serifs"
 selectorAffix.W = "serifed"
 selectorAffix."W/sansSerif" = "serifless"
-selectorAffix.WHookTop = "serifed"
+selectorAffix.WHookTop = { if = [{ body = "straight-double-v" }, { body = "straight-asymmetric" }], then = "motionSerifed", else = "serifed" }
 
 
 
@@ -9553,6 +9553,7 @@ description = "Anonymous Pro Style"
 
 [composite.ss02.design]
 capital-c = "unilateral-serifed"
+capital-d = "more-rounded-serifless"
 capital-g = "toothless-rounded-serifed-hooked"
 capital-i = "short-serifed"
 capital-j = "serifless"
@@ -9623,6 +9624,7 @@ percent = "rings-continuous-slash"
 micro-sign = "toothed-serifless"
 
 [composite.ss02.slab-override.design]
+capital-d = "more-rounded-bilateral-serifed"
 capital-j = "serifed-symmetric"
 capital-m = "hanging-serifed"
 capital-v = "straight-serifed"
@@ -9674,6 +9676,7 @@ capital-w = "straight-serifless"
 a = "double-storey-serifless"
 b = "toothless-corner-serifless"
 d = "toothed-serifless"
+e = "flat-crossbar"
 f = "flat-hook-serifless"
 g = "double-storey"
 i = "serifed"
@@ -9728,6 +9731,7 @@ micro-sign = "tailed-serifless"
 
 [composite.ss03.italic]
 a = "single-storey-top-cut-serifless"
+e = "rounded"
 f = "flat-hook-tailed"
 g = "single-storey-top-cut"
 i = "tailed-serifed"
@@ -10282,6 +10286,7 @@ w = "curly-serifless"
 x = "curly-serifless"
 y = "curly-serifless"
 z = "curly-serifless"
+capital-eszet = "corner-serifless"
 long-s = "bent-hook-middle-serifed"
 eszet = "longs-s-lig-serifless"
 capital-delta = "curly"
@@ -10321,6 +10326,7 @@ at = "threefold"
 dollar = "open"
 cent = "open"
 percent = "dots"
+bar = "force-upright"
 micro-sign = "toothed-serifless"
 lig-ltgteq = "slanted"
 lig-neq = "slightly-slanted-dotted"
@@ -10328,7 +10334,9 @@ lig-double-arrow-bar = "with-notch"
 lig-single-arrow-bar = "with-notch"
 
 [composite.ss08.italic]
+e = "rounded"
 g = "single-storey-serifless"
+capital-eszet = "flat-top-serifless"
 cyrl-yeri = "round"
 cyrl-yery = "round"
 
@@ -10356,6 +10364,7 @@ w = "curly-serifed"
 x = "curly-serifed"
 y = "curly-serifed"
 z = "curly-serifed"
+capital-eszet = "corner-bottom-serifed"
 long-s = "bent-hook-double-serifed"
 eszet = "longs-s-lig-bottom-serifed"
 lower-kappa = "curly-tri-serifed"
@@ -10382,6 +10391,7 @@ v = "curly-motion-serifed"
 w = "curly-motion-serifed"
 x = "curly-bilateral-motion-serifed"
 y = "curly-motion-serifed"
+capital-eszet = "flat-top-serifed"
 lower-kappa = "curly-top-left-and-bottom-right-serifed"
 lower-mu = "toothed-motion-serifed"
 cyrl-ka = "curly-top-left-and-bottom-right-serifed"
@@ -10523,6 +10533,7 @@ capital-v = "straight-serifless"
 capital-w = "straight-vertical-sides-serifless"
 a = "double-storey-toothless-corner"
 b = "toothed-serifless"
+e = "flat-crossbar"
 f = "flat-hook-serifless"
 g = "single-storey-flat-hook-serifless"
 i = "hooky"
@@ -10564,6 +10575,7 @@ micro-sign = "toothless-rounded-serifless"
 capital-a = "straight-serifless"
 a = "single-storey-top-cut-tailed"
 b = "bottom-cut-serifless"
+e = "rounded"
 g = "single-storey-flat-hook-top-cut"
 i = "serifed-flat-tailed"
 j = "serifed"
@@ -10674,6 +10686,7 @@ capital-w = "straight-serifless"
 a = "double-storey-toothless-corner"
 b = "toothless-corner-serifless"
 d = "toothless-corner-serifless"
+e = "flat-crossbar"
 f = "serifless"
 g = "single-storey-earless-corner"
 i = "serifed-semi-tailed"
@@ -10739,6 +10752,7 @@ micro-sign = "toothless-corner-serifless"
 [composite.ss12.italic]
 a = "single-storey-earless-corner-tailed"
 d = "tailed-serifless"
+e = "rounded"
 f = "tailed"
 i = "tailed-serifed"
 l = "tailed-serifed"
@@ -10936,6 +10950,7 @@ capital-v = "straight-serifless"
 capital-w = "straight-flat-top-serifless"
 a = "double-storey-serifless"
 d = "toothed-serifless"
+e = "flat-crossbar"
 f = "flat-hook-serifless"
 g = "single-storey-flat-hook-serifless"
 i = "serifed"
@@ -10995,6 +11010,7 @@ lig-hyphen-chain = "without-notch"
 
 [composite.ss14.italic]
 a = "single-storey-tailed"
+e = "rounded"
 f = "flat-hook-tailed"
 y = "cursive-flat-hook-serifless"
 long-s = "flat-hook-tailed"
@@ -11075,6 +11091,7 @@ capital-v = "straight-serifless"
 capital-w = "straight-serifless"
 a = "double-storey-tailed"
 d = "toothed-serifless"
+e = "flat-crossbar"
 f = "flat-hook-serifed-crossbar-at-x-height"
 g = "double-storey"
 i = "serifed"
@@ -11132,6 +11149,7 @@ micro-sign = "toothed-serifless"
 
 [composite.ss15.italic]
 a = "single-storey-tailed"
+e = "rounded"
 f = "flat-hook-diagonal-tailed-crossbar-at-x-height"
 g = "single-storey-serifless"
 i = "serifed-diagonal-tailed"
@@ -11353,6 +11371,7 @@ capital-z = "straight-top-serifed"
 a = "double-storey-tailed"
 b = "toothed-serifless"
 c = "serifless"
+e = "flat-crossbar"
 f = "serifed"
 g = "double-storey"
 h = "straight-serifless"
@@ -11420,6 +11439,7 @@ micro-sign = "tailed-serifless"
 a = "single-storey-tailed"
 b = "toothless-corner-serifless"
 c = "unilateral-inward-serifed"
+e = "rounded"
 f = "tailed"
 g = "single-storey-serifless"
 h = "tailed-serifless"
@@ -11533,6 +11553,7 @@ capital-w = "straight-serifless"
 a = "double-storey-tailed"
 b = "toothless-corner-serifless"
 d = "toothed-serifless"
+e = "flat-crossbar"
 f = "serifless-crossbar-at-x-height"
 g = "double-storey"
 i = "serifed"
