Refine glyph shape of `GHookTop`.

--- a/params/variants.toml
+++ b/params/variants.toml
@@ -934,7 +934,7 @@ rank = 3
 descriptionAffix = "inward top serif"
 selectorAffix.G = "inwardSerifed"
 selectorAffix."G/sansSerif" = "serifless"
-selectorAffix.GHookTop = "serifed"
+selectorAffix.GHookTop = "inwardSerifed"
 
 [prime.capital-g.variants-buildup.stages.hook.hookless]
 rank = 1
@@ -2864,8 +2864,8 @@ selectorAffix.f = "crossbarAtXHeight"
 selectorAffix."f/sansSerif" = "crossbarAtXHeight"
 selectorAffix."f/compLigLeft1" = "crossbarAtXHeight"
 selectorAffix."f/compLigLeft2" = "crossbarAtXHeight"
-selectorAffix."f/compLigLeft3" = ""
-selectorAffix."f/compLigLeft4" = ""
+selectorAffix."f/compLigLeft3" = "crossbarAtXHeight"
+selectorAffix."f/compLigLeft4" = "crossbarAtXHeight"
 selectorAffix."f/phoneticLeft" = "crossbarAtXHeight"
 selectorAffix."f/tailless" = "crossbarAtXHeight"
 selectorAffix.fLenis = "crossbarAtXHeight"
@@ -9575,6 +9575,7 @@ j = "serifed"
 k = "straight-serifless"
 l = "serifed"
 r = "serifed"
+t = "bent-hook"
 u = "toothed-serifless"
 v = "straight-serifless"
 w = "straight-flat-top-serifless"
@@ -10280,6 +10281,7 @@ i = "serifed"
 j = "serifed"
 k = "curly-serifless"
 l = "zshaped"
+t = "bent-hook"
 u = "toothed-serifless"
 v = "curly-serifless"
 w = "curly-serifless"
@@ -10533,6 +10535,7 @@ capital-v = "straight-serifless"
 capital-w = "straight-vertical-sides-serifless"
 a = "double-storey-toothless-corner"
 b = "toothed-serifless"
+d = "toothed-serifless"
 e = "flat-crossbar"
 f = "flat-hook-serifless"
 g = "single-storey-flat-hook-serifless"
@@ -10542,6 +10545,7 @@ k = "symmetric-connected-serifless"
 l = "hooky"
 q = "straight-serifless"
 t = "flat-hook"
+u = "toothed-serifless"
 v = "straight-serifless"
 w = "rounded-vertical-sides-serifless"
 y = "cursive-flat-hook-serifless"
@@ -10575,12 +10579,14 @@ micro-sign = "toothless-rounded-serifless"
 capital-a = "straight-serifless"
 a = "single-storey-top-cut-tailed"
 b = "bottom-cut-serifless"
+d = "tailed-serifless"
 e = "rounded"
 g = "single-storey-flat-hook-top-cut"
 i = "serifed-flat-tailed"
 j = "serifed"
 l = "serifed-flat-tailed"
 q = "top-cut-straight-serifless"
+u = "tailed-serifless"
 cyrl-a = "single-storey-top-cut-tailed"
 cyrl-u = "cursive-flat-hook-serifless"
 
@@ -10592,12 +10598,14 @@ capital-m = "hanging-serifed"
 capital-v = "straight-serifed"
 capital-w = "straight-vertical-sides-serifed"
 b = "toothed-serifed"
+d = "toothed-serifed"
 f = "flat-hook-serifed"
 g = "single-storey-flat-hook-serifed"
 i = "serifed"
 k = "symmetric-connected-serifed"
 l = "serifed"
 q = "straight-serifed"
+u = "toothed-serifed"
 v = "straight-serifed"
 w = "rounded-vertical-sides-serifed"
 x = "straight-serifed"
@@ -10616,11 +10624,13 @@ micro-sign = "toothless-rounded-serifed"
 [composite.ss10.slab-override.italic]
 capital-a = "straight-base-serifed"
 b = "bottom-cut-serifed"
+d = "tailed-serifed"
 g = "single-storey-flat-hook-top-cut"
 i = "serifed-flat-tailed"
 k = "symmetric-connected-top-left-and-bottom-right-serifed"
 l = "serifed-flat-tailed"
 q = "top-cut-straight-serifed"
+u = "tailed-motion-serifed"
 v = "straight-motion-serifed"
 w = "rounded-vertical-sides-motion-serifed"
 x = "straight-bilateral-motion-serifed"
@@ -11371,6 +11381,7 @@ capital-z = "straight-top-serifed"
 a = "double-storey-tailed"
 b = "toothed-serifless"
 c = "serifless"
+d = "toothed-serifless"
 e = "flat-crossbar"
 f = "serifed"
 g = "double-storey"
@@ -11384,6 +11395,7 @@ n = "straight-serifless"
 r = "hookless-serifed"
 s = "serifless"
 t = "flat-hook-short-neck"
+u = "toothed-serifless"
 v = "straight-serifless"
 w = "straight-serifless"
 x = "straight-serifless"
@@ -11439,6 +11451,7 @@ micro-sign = "tailed-serifless"
 a = "single-storey-tailed"
 b = "toothless-corner-serifless"
 c = "unilateral-inward-serifed"
+d = "tailed-serifless"
 e = "rounded"
 f = "tailed"
 g = "single-storey-serifless"
@@ -11450,6 +11463,7 @@ m = "tailed-serifless"
 n = "tailed-serifless"
 r = "corner-hooked-top-serifed"
 s = "unilateral-inward-serifed"
+u = "tailed-serifless"
 v = "cursive-serifed"
 w = "cursive-serifless"
 x = "chancery"
@@ -11483,11 +11497,13 @@ capital-z = "straight-serifed"
 a = "double-storey-hook-inward-serifed-tailed"
 b = "toothed-serifed"
 c = "unilateral-inward-serifed"
+d = "toothed-serifed"
 h = "straight-serifed"
 k = "straight-serifed"
 m = "serifed"
 n = "straight-serifed"
 s = "unilateral-inward-serifed"
+u = "toothed-serifed"
 v = "straight-serifed"
 w = "straight-serifed"
 x = "straight-serifed"
@@ -11516,11 +11532,13 @@ micro-sign = "tailed-serifed"
 capital-u = "toothed-motion-serifed"
 a = "single-storey-tailed"
 b = "toothless-corner-serifed"
+d = "tailed-serifed"
 h = "tailed-motion-serifed"
 k = "cursive-top-left-and-bottom-right-serifed"
 m = "tailed-top-left-serifed"
 n = "tailed-motion-serifed"
 s = "bilateral-inward-serifed"
+u = "tailed-motion-serifed"
 v = "cursive-serifed"
 w = "cursive-serifed"
 x = "chancery"
@@ -11561,6 +11579,7 @@ j = "serifed"
 k = "symmetric-connected-serifless"
 l = "serifed"
 q = "earless-corner-straight-serifless"
+t = "bent-hook"
 u = "toothed-serifless"
 v = "straight-serifless"
 w = "straight-serifless"
