--- a/params/variants.toml
+++ b/params/variants.toml
@@ -8392,7 +8392,7 @@ selector.asciiCaret = "high"
 
 [prime.caret.variants.medium]
 rank = 2
-description = "Lower circumflex `^`"
+description = "Medium circumflex `^`"
 selector.asciiCaret = "medium"
 
 [prime.caret.variants.low]
@@ -10662,6 +10662,7 @@ tilde = "high"
 asterisk = "hex-high"
 underscore = "high"
 caret = "high"
+paren = "normal"
 brace = "straight"
 guillemet = "straight"
 number-sign = "upright"
