--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "@iosevka/website",
-  "private": true,
-  "version": "33.2.1",
-  "scripts": {
-    "dev": "next",
-    "start": "next start",
-    "build": "next build",
-    "lint": "eslint",
-    "lint:fix": "eslint --fix"
-  },
-  "dependencies": {
-    "@iarna/toml": "^2.2.5",
-    "change-case": "^5.4.4",
-    "immer": "^10.1.1",
-    "next": "^14.2.15",
-    "react": "^18.3.1",
-    "react-countup": "^6.5.3",
-    "react-dom": "^18.3.1",
-    "react-intersection-observer": "^9.13.1",
-    "react-use": "^17.5.1",
-    "sass": "^1.79.5",
-    "use-onclickoutside": "^0.4.1"
-  },
-  "devDependencies": {
-    "@types/node": "^22.7.5",
-    "@types/react": "^18.3.11",
-    "eslint": "^9.12.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-import": "^2.31.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "prettier": "^3.3.3",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.8.1"
-  }
+	"name": "@iosevka/website",
+	"private": true,
+	"version": "33.2.1",
+	"scripts": {
+		"dev": "next",
+		"start": "next start",
+		"build": "next build",
+		"lint": "eslint",
+		"lint:fix": "eslint --fix"
+	},
+	"dependencies": {
+		"@iarna/toml": "^2.2.5",
+		"change-case": "^5.4.4",
+		"immer": "^10.1.1",
+		"next": "^15.3.1",
+		"react": "^19.1.0",
+		"react-countup": "^6.5.3",
+		"react-dom": "^19.1.0",
+		"react-intersection-observer": "^9.16.0",
+		"react-use": "^17.6.0",
+		"sass": "^1.86.3",
+		"usehooks-ts": "^3.1.1"
+	},
+	"devDependencies": {
+		"@types/node": "^22.14.1",
+		"@types/react": "^19.1.2",
+		"eslint": "^9.25.0",
+		"eslint-config-prettier": "^10.1.2",
+		"eslint-plugin-import": "^2.31.0",
+		"eslint-plugin-prettier": "^5.2.6",
+		"prettier": "^3.5.3",
+		"typescript": "^5.8.3",
+		"typescript-eslint": "^8.30.1"
+	}
 }
